# DjangoSamplePoetry

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
sample/: manage.py
sample/sample/: settings.py  urls.py
